--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-scroll-top": "^0.2.1",
     "react-scripts": "3.1.2",
     "serve": "^11.2.0"
   },
