--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-ga": "^2.7.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-scroll-top": "^0.2.1",
