--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-ga": "^2.7.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-scroll-top": "^0.2.1",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
   }
 }
