--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-scroll-top": "^0.2.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
