--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-ga": "^2.7.0",
     "react-hamburger-menu": "^1.1.1",
     "react-hotjar": "^2.0.4",
+    "react-responsive-modal": "^4.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-scroll-top": "^0.2.1",
